deliveries service is ready; add multi database docker image;
